// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`build basic > dist > app.js 1`] = `
"App({globalData:{},onLaunch(){}});
"
`;

exports[`build basic > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json"
}"
`;

exports[`build basic > dist > app.wxss 1`] = `
".app{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > components/Navbar/Navbar.js 1`] = `
"Component({});
"
`;

exports[`build basic > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`build basic > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`build basic > dist > components/Navbar/Navbar.wxss 1`] = `
".navbar{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > pages/index/index.js 1`] = `
"Page({});
"
`;

exports[`build basic > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`build basic > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`build basic > dist > pages/index/index.wxss 1`] = `
".page{color:red}
/*$vite$:1*/"
`;

exports[`build basic > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`build basic > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`build basic > dist 1`] = `
[
  "app.js",
  "app.json",
  "app.wxss",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Navbar/Navbar.wxss",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "pages/index/index.wxss",
  "sitemap.json",
  "theme.json",
]
`;

exports[`tabbar-appbar > dist > app.js 1`] = `
"App({globalData:{},onLaunch(){}});
"
`;

exports[`tabbar-appbar > dist > app.json 1`] = `
"{
  "pages": [
    "pages/index/index",
    "pages/index/vue"
  ],
  "window": {},
  "style": "v2",
  "componentFramework": "glass-easel",
  "sitemapLocation": "sitemap.json",
  "tabBar": {
    "custom": true
  },
  "appBar": {},
  "usingComponents": {
    "Test": "/components/Test"
  }
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > app-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > app-bar/index.wxml 1`] = `"<view>hello weapp-vite! from app-bar</view>"`;

exports[`tabbar-appbar > dist > app-bar/index.wxss 1`] = `
".ss{color:red}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Navbar/Navbar.wxml 1`] = `
"<view>Navbar</view>
"
`;

exports[`tabbar-appbar > dist > components/Test/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > components/Test/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > components/Test/index.wxml 1`] = `"<view>Navbar</view>"`;

exports[`tabbar-appbar > dist > components/Test/index.wxss 1`] = `
".test{clear:both}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.js 1`] = `
"Component({});
"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.json 1`] = `
"{
  "component": true,
  "styleIsolation": "apply-shared",
  "usingComponents": {}
}"
`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxml 1`] = `"<view class="pb-8 pt-4 bg-[#af6ec5] flex justify-center">hello weapp-vite! aa</view>"`;

exports[`tabbar-appbar > dist > custom-tab-bar/index.wxss 1`] = `
".a{color:red}
/*$vite$:1*/"
`;

exports[`tabbar-appbar > dist > pages/index/async.js 1`] = `
"Object.defineProperties(exports,{__esModule:{value:!0},[Symbol.toStringTag]:{value:"Module"}});const e="async",a=1;exports.async=e;exports.default=a;
"
`;

exports[`tabbar-appbar > dist > pages/index/async2.js 1`] = `
"Object.defineProperties(exports,{__esModule:{value:!0},[Symbol.toStringTag]:{value:"Module"}});const e="async2",a=2;exports.async2=e;exports.default=a;
"
`;

exports[`tabbar-appbar > dist > pages/index/index.js 1`] = `
"const{part:r}=Promise.resolve().then(()=>require("./part.js")),{other:s}=Promise.resolve().then(()=>require("./other.js")).then(e=>e.other);Page({async onLoad(){const e=await Promise.resolve().then(()=>require("./async.js")),o=await Promise.resolve().then(()=>require("./async2.js"));console.log(r,s,e,o)}});
"
`;

exports[`tabbar-appbar > dist > pages/index/index.json 1`] = `
"{
  "usingComponents": {
    "Navbar": "/components/Navbar/Navbar"
  },
  "navigationBarTitleText": "初始模板"
}"
`;

exports[`tabbar-appbar > dist > pages/index/index.wxml 1`] = `
"<view>
  <Navbar />
  <view>Hello World From Weapp-vite!</view>
</view>
"
`;

exports[`tabbar-appbar > dist > pages/index/other.js 1`] = `
"Object.defineProperty(exports,Symbol.toStringTag,{value:"Module"});function l(e,a){for(var o=0;o<a.length;o++){const t=a[o];if(typeof t!="string"&&!Array.isArray(t)){for(const r in t)if(r!=="default"&&!(r in e)){const n=Object.getOwnPropertyDescriptor(t,r);n&&Object.defineProperty(e,r,n.get?n:{enumerable:!0,get:()=>t[r]})}}}return Object.freeze(Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}))}function i(e){return e&&e.__esModule&&Object.prototype.hasOwnProperty.call(e,"default")?e.default:e}var u,f;function s(){return f||(f=1,u={other:"other"}),u}var c=s();const h=i(c),p=l({__proto__:null,default:h},[c]);exports.other=p;
"
`;

exports[`tabbar-appbar > dist > pages/index/part.js 1`] = `
"Object.defineProperties(exports,{__esModule:{value:!0},[Symbol.toStringTag]:{value:"Module"}});const e="part",t=3;exports.default=t;exports.part=e;
"
`;

exports[`tabbar-appbar > dist > sitemap.json 1`] = `
"{
  "desc": "关于本文件的更多信息，请参考文档 https://developers.weixin.qq.com/miniprogram/dev/framework/sitemap.html",
  "rules": [
    {
      "action": "allow",
      "page": "*"
    }
  ]
}"
`;

exports[`tabbar-appbar > dist > theme.json 1`] = `
"{
  "light": {},
  "dark": {}
}"
`;

exports[`tabbar-appbar > dist 1`] = `
[
  "app-bar/index.js",
  "app-bar/index.json",
  "app-bar/index.wxml",
  "app-bar/index.wxss",
  "app.js",
  "app.json",
  "components/Navbar/Navbar.js",
  "components/Navbar/Navbar.json",
  "components/Navbar/Navbar.wxml",
  "components/Test/index.js",
  "components/Test/index.json",
  "components/Test/index.wxml",
  "components/Test/index.wxss",
  "custom-tab-bar/index.js",
  "custom-tab-bar/index.json",
  "custom-tab-bar/index.wxml",
  "custom-tab-bar/index.wxss",
  "pages/index/async.js",
  "pages/index/async2.js",
  "pages/index/index.js",
  "pages/index/index.json",
  "pages/index/index.wxml",
  "pages/index/other.js",
  "pages/index/part.js",
  "sitemap.json",
  "theme.json",
]
`;
